Implemented basic REST interface in app.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,11 @@
 FROM python:3-alpine
 
+EXPOSE 1028
+
 RUN apk update && apk add postgresql-dev gcc python3-dev musl-dev
 
 WORKDIR /usr/src/app
 
-RUN pip install --no-cache-dir psycopg2 config configparser
+RUN pip install --no-cache-dir psycopg2 config configparser flask flask_restful
 
 CMD ["python", "./main.py"]
