--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
         ports:
             - 1024:80
         volumes:
+            - 'c:\dev\twitgallery\web\nginx:/etc/nginx'
             - 'c:\dev\twitgallery\web\www:/usr/share/nginx/html'
         restart: always
     app:
