--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,5 +1,6 @@
 FROM nginx:1-alpine
 
+VOLUME c:\dev\twitgallery\web\nginx:/etc/nginx
 VOLUME c:\dev\twitgallery\web\www:/usr/share/nginx/html
 
 EXPOSE 80
