--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
         build: './app'
         depends_on:
             - db
+        ports 5000:5000
         volumes:
             - 'c:\dev\twitgallery\app\src:/usr/src/app'
         env_file: app.env
@@ -27,8 +28,6 @@ services:
             - POSTGRES_USER=tg_user
             - POSTGRES_PASSWORD=docker
             - POSTGRES_DB=twitgallery
-        ports:
-            - 5432:5432
         build: './db'
         restart: always
 
