--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
         build: './app'
         depends_on:
             - db
-        ports 5000:5000
+        ports:
+            - 5000:5000
         volumes:
             - 'c:\dev\twitgallery\app\src:/usr/src/app'
         env_file: app.env
